--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,10 @@
     "32": "images/icon.png",
     "48": "images/icon.png",
     "128": "images/icon.png"
-  }
+  },
+  "background": {
+    "scripts": ["javascripts/lib/jquery.min.js", "javascripts/background.js"],
+    "persistent": false
+  },
+  "permissions": ["storage"]
 }
